# Multiflow

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Multiflow.pro  README.md
MultiflowLibrary/: CMakeLists.txt  MultiflowLibrary.pro  MultiflowLibrary_global.h  MultiflowLibrary_global.hpp  constants.hpp
MultiflowLibrary/algorithm/: algorithm.cpp  algorithm.hpp
MultiflowLibrary/core/: MultiflowLibrary_global.h  core.cpp  core.h  core.hpp  core.ixx
MultiflowLibrary/expression/: add.cpp  add.h  add.hpp  closure.cpp  closure.hpp  condition.cpp  condition.hpp  constant.cpp  constant.h  constant.hpp  disp.cpp  disp.hpp  divide.cpp  divide.hpp  environment.cpp  environment.hpp  equal_to.cpp  equal_to.hpp  expression.cpp  expression.h  expression.hpp  greater_than.cpp  greater_than.hpp  logarithm.cpp  logarithm.hpp  logical_and.cpp  logical_and.hpp  logical_not.cpp  logical_not.hpp  logical_or.cpp  logical_or.hpp  lower_than.cpp  lower_than.hpp  minus.cpp  minus.hpp  multiply.cpp  multiply.hpp  power.cpp  power.hpp  referencing_function.cpp  (+8 more)
MultiflowLibrary/formula/: formula.cpp  formula.hpp  formula.ixx
MultiflowLibrary/logging/: logging.cpp  logging.h  logging.hpp
MultiflowLibrary/math/: math.cpp  math.h  math.hpp
MultiflowLibrary/parser/: formula_parser.cpp  formula_parser.hpp  formula_parser.ixx  lisp_parser.cpp  lisp_parser.hpp
MultiflowLibrary/utils/: formula_utils.cpp  formula_utils.hpp  type_utils.cpp  type_utils.hpp
MultiflowUI/: CMakeLists.txt  MultiflowUI.pro  common.h  constants.hpp  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  shared.cpp  shared.hpp
MultiflowUI/TView/: MAbstractItem.cpp  MAbstractItem.hpp  MArrow.hpp  MGraphicsScene.cpp  MGraphicsScene.hpp  MJunctionItem.cpp  MJunctionItem.hpp  MSinkItem.cpp  MSinkItem.hpp  MSourceItem.cpp  MSourceItem.hpp  MWellItem.cpp  MWellItem.hpp  mulitem.cpp  mulitem.h  tarrow.cpp  tarrow.h  tflowlineitem.cpp  tflowlineitem.h  tgraphicsscene.cpp  tgraphicsscene.h  tgraphicsview.cpp  tgraphicsview.h  tmultiflowitem.cpp  tsinkitem.cpp  tsinkitem.h  tsourceitem.cpp  tsourceitem.h  twellitem.cpp  twellitem.h
MultiflowUI/TWidget/: MTabWidget.cpp  MTabWidget.h  ttabwidget.cpp  ttabwidget.h  ttreewidget.cpp  ttreewidget.h
MultiflowUI/editor/: MFlowlineDialog.cpp  MFlowlineDialog.hpp  MJunctionDialog.cpp  MJunctionDialog.hpp  MSinkDialog.cpp  MSinkDialog.hpp  MSourceDialog.cpp  MSourceDialog.hpp  MWellWidget.cpp  MWellWidget.hpp  MWellWindow.cpp  MWellWindow.hpp  SinkDialog.cpp  SinkDialog.hpp  SinkDialog.ui
MultiflowUI/entity/: MEntity.cpp  MEntity.hpp  MFlowline.cpp  MFlowline.hpp  MIndependentVariables.cpp  MIndependentVariables.hpp  MJunction.cpp  MJunction.hpp  MSink.cpp  MSink.hpp  MSource.cpp  MSource.hpp  MWell.cpp  MWell.hpp  common.hpp  mflowline.cpp  msource.cpp  msource.h
MultiflowUI/entity/unit/: PvtCalculationUnit.cpp  PvtCalculationUnit.hpp  WellCalculationUnit.cpp  WellCalculationUnit.hpp  WellReservoirUnit.cpp  WellReservoirUnit.hpp
MultiflowUI/graphics_view/: MAbstractItem.cpp  MAbstractItem.hpp  MArrow.cpp  MArrow.hpp  MGraphicsScene.cpp  MGraphicsScene.hpp  MGraphicsView.cpp  MGraphicsView.h  MJunctionItem.cpp  MJunctionItem.hpp  MSinkItem.cpp  MSinkItem.hpp  MSourceItem.cpp  MSourceItem.hpp  MWellItem.cpp  MWellItem.hpp
MultiflowUI/graphics_view/well/: MWellGeneric.cpp  MWellGeneric.hpp  MWellHead.cpp  MWellHead.hpp
MultiflowUI/graphics_view/widget/: MTabWidget.cpp  MTabWidget.h  MTabWidget.hpp  MTreeWidget.cpp  MTreeWidget.h  MTreeWidget.hpp
MultiflowUI/graphics_view/window/: MWellDisplayWindow.cpp  MWellDisplayWindow.hpp  MWellDisplayWindow.ui
MultiflowUI/helper/: CoordinateHelper.cpp  CoordinateHelper.hpp  MEntityHelper.cpp  MEntityHelper.hpp  SettingsHelper.cpp  SettingsHelper.hpp  settings_helper.cpp  settings_helper.hpp
MultiflowUI/parUI/: mflowlinedialog.cpp  mflowlinedialog.h  mjunctiondialog.cpp  mjunctiondialog.h  msinkdialog.cpp  msinkdialog.h  msourcedialog.cpp  msourcedialog.h  mwellwindow.cpp  mwellwindow.h  mwellwindow.ui  sinkdialog.cpp
MultiflowUI/parser/: EntityParser.cpp  EntityParser.hpp
MultiflowUI/qml/: main.cpp  main.hpp  main.qml
MultiflowUI/qml/bridge/: MSignalBridge.cpp  MSignalBridge.hpp
MultiflowUI/qml/components/: formula_viewer.qml
MultiflowUI/qml/interface/: IQmlObject.hpp  IQmlSingleton.hpp
MultiflowUI/qml/mixin/: SingletonMixin.hpp  StaticConstructorMixin.hpp
MultiflowUI/qml/model/: QmlEnvironment.cpp  QmlExpression.cpp  QmlExpression.hpp  QmlFormula.cpp  QmlFormula.hpp  QmlResult.cpp  qml_environment.cpp  qml_environment.hpp  qml_expression.cpp  qml_expression.hpp  qml_formula.cpp  qml_formula.hpp  qml_formula.ixx  qml_result.cpp  qml_result.hpp
MultiflowUI/qml/utils/: QmlFormulaUtils.cpp  QmlFormulaUtils.hpp  UIUtils.cpp  UIUtils.hpp
MultiflowUI/qml/view/: formula_viewer.ixx  main_view.ixx  window_formula_viewer.cpp  window_formula_viewer.hpp  window_main.cpp  window_main.hpp
MultiflowUI/qml/viewmodel/: VMFormulaViewer.cpp  VMFormulaViewer.hpp  vm_formula_viewer.cpp  vm_formula_viewer.hpp
MultiflowUI/resources/image/: Thumbs.db
MultiflowUI/resources/model/: formulae.yaml
MultiflowUI/service/: EntityService.cpp  EntityService.hpp  FluidDataService.cpp  FluidDataService.hpp  FormulaService.cpp  FormulaService.hpp  PVTService.cpp  PVTService.hpp
MultiflowUI/unit_converter/: AbstractUnitConverter.cpp  AbstractUnitConverter.hpp  FluidUnitConverter.cpp  FluidUnitConverter.hpp  GasRatioConverter.cpp  GasRatioConverter.hpp  LengthConverter.cpp  LengthConverter.hpp  PressureConverter.cpp  PressureConverter.hpp  RatioFractionConverter.cpp  RatioFractionConverter.hpp  TemperatureConverter.cpp  TemperatureConverter.hpp  TimeConverter.cpp  TimeConverter.hpp
MultiflowUI/util/delegate/: ComputeVIPRDelegate.hpp  EditableDelegate.hpp  GradeDelegate.cpp  GradeDelegate.hpp  (+8 more)
MultiflowUI/utils/: YamlUtils.cpp  YamlUtils.hpp
MultiflowUI/widget/: MainWindow.cpp  MainWindow.hpp  SplashDialog.cpp  SplashDialog.hpp  SplashDialog.ui  mainwindow.cpp  mainwindow.hpp
MultiflowUI/xlsx/: xlsxdrawinganchor.cpp  xlsxutility_p.h
(+2270 files in other folders)
